--- a/experiment.html
+++ b/experiment.html
@@ -177,7 +177,6 @@
     
     <div class="logo-container">
         <div class="logo-inner">
-            <h2>SHALL GROUP OF INSTITUTIONS</h2>
             <h2>INDORE INSTITUTE OF SCIENCE & TECHNOLOGY</h2>
             <h3>DEPARTMENT OF ENGINEERING PHYSICS</h3>
         </div>
@@ -397,8 +396,8 @@
 
         <footer class="experiment-footer">
             <div class="footer-content">
-                <p>Engineering Physics Lab Manual - Page 37 & 55</p>
-                <p>© 2023 Indore Institute of Science & Technology</p>
+                <p>Engineering Physics Lab Manual</p>
+                <p>© 2025 Indore Institute of Science & Technology</p>
             </div>
         </footer>
     </div>
