--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
     
     <div class="logo-container">
         <div class="logo-inner">
-            <h2>SHALL GROUP OF INSTITUTIONS</h2>
             <h2>INDORE INSTITUTE OF SCIENCE & TECHNOLOGY</h2>
             <h3>DEPARTMENT OF ENGINEERING PHYSICS</h3>
         </div>
@@ -161,14 +160,14 @@
 
             <div class="section">
                 <h2>Submitted To</h2>
-                <div>Irfan Mansuri</div>
+                <div>Proff. Irfan Mansuri</div>
                 <p>Department of Engineering Physics<br>
                 Indore Institute of Science and Technology</p>
             </div>
 
             <div class="footer">
                 <p>Engineering Physics Lab Manual</p>
-                <p>© 2023 Indore Institute of Science & Technology</p>
+                <p>© 2025 Indore Institute of Science & Technology</p>
             </div>
         </div>
     </div>
